--- a/docs/style.css
+++ b/docs/style.css
@@ -17,6 +17,16 @@ body {
     border: none;
     background: none;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card-body {
+    min-height: 220px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .card h1 {
